# pivac

./: .gitignore  CLAUDE.md  DESC.rst  LICENSE  Pivac Architecture.pptx  README.md  overview.md  pyproject.toml  setup.cfg  setup.py
config/: config.sentry-sample.yml  config.yml.flir  config.yml.sample
docs/: circ-loop-temp-monitoring-plan.md  domestic-water-node-build-spec.md  opensprinkler-gallons-ui-fork-scope.md  pivac-architecture.mermaid  water-meter-camera-hardware-options.md  water-meter-camera-monitoring-plan.md  water-meter-monitoring-plan.md
grafana/dashboards/: chiller-time-r.json  dhw-by-day-r.json  pi-temperature.json  pivacr.json
grafana/provisioning/alerting/: contact-points.yaml  (+2 more)
pivac/: ArduinoSensor.py  ArduinoThermPSI.py  Emporia.py  FlirFX.py  GPIO.py  ModuleTemplate.py  OneWireTherm.py  Power.py  RedLink.py  Sentry.py  Sprinkler.py  TED5000.py  WaterMeter.py  __init__.py
scripts/: emporia-discover.py  grafana_graph_bridge.py  nas-image-backup.sh  pivac  pivac-provider.py  pivac-provider.sh  provider.sh  sd-clone.sh  sentry-calibrate.py  sk-pivac-provider.py  sk-pivac-provider.sh
scripts/systemd/: grafana-graph-bridge.service  nas-image-backup.service  nas-image-backup.timer  pivac-1wire.service  pivac-arduino-psi.service  pivac-arduino-therm-psi.service  pivac-emporia.service  pivac-gpio.service  pivac-redlink.service  pivac-sentry.service  pivac-sprinkler.service  pivac-watermeter.service  sd-clone.service  sd-clone.timer
signalk/: example_settings.json
tests/: test_sentry_guard.py
wilhelmsk/: ipad.wlyt  iphone.wlyt
(+1 files in other folders)
