[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pivac"
version = "0.7.7"
description = "Raspberry Pi input utilities"
readme = "DESC.rst"
license = {text = "MIT"}
authors = [
    {name = "David Lewis", email = "david@dglc.com"}
]
keywords = ["rpi", "raspberry", "pi", "signalk", "ted", "ted5000", "redlink", "honeywell"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "w1thermsensor",
    "pytemperature",
    "lxml",
    "requests",
    "mechanize",
    "beautifulsoup4",
    "PyYAML",
    "soupsieve",
]

[project.urls]
Homepage = "https://github.com/dglcinc/pivac"

[tool.setuptools.packages.find]
where = ["."]
include = ["pivac*"]
