# setup.cfg handles legacy options that pyproject.toml does not yet support cleanly:
# - scripts: shell/python scripts installed to PATH
# - data_files: config files installed to absolute system paths

[options]
scripts =
    scripts/provider.sh
    scripts/pivac-provider.sh
    scripts/pivac-provider.py
    scripts/pivac

[options.data_files]
/etc/pivac =
    config/config.yml.sample
/etc/pivac/signalk =
    config/config.yml.flir
    signalk/example_settings.json
